# DocCheck

./: .pre-commit-hooks.yaml  .pylintrc  doccheck.py  doccheck_wrapper.py  pyproject.toml
doccheck/: __init__.py  doccheck.py
doccheck/sandbox/: draft_class.py  draft_static_class.py
dockcheck/: __init__.py  doccheck.py
sandbox/: draft_class.py
src/: doccheck.py  doccheck_wrapper.py
