
[project]
name = "doccheck"
version = "0.1.22"
description = "A minimal doctest-like tool for testing expressions inside docstrings"
authors = [{ name = "Andrea Parodi", email = "andrea.parodi.mi@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/andreparo/DocCheck"
Repository = "https://github.com/andreparo/DocCheck"

[project.scripts]
doccheck = "doccheck:main"